<resources>

    <string-array name="SupportedLanguages">

        <item>@string/en</item>
        <item>@string/sw</item>

    </string-array>

    <string-array name="pendingFriendList">
        <item>Jane Doe</item>
        <item>Calvin Klein</item>

        <item>Epiphany Muriuki</item>
        <item>Oliver Muthomi</item>
        <item>Epiphany Muriuki</item>
        <item>Oliver Muthomi</item>
    </string-array>

    <string-array name="Friends">
        <item>Bob Zack</item>
        <item>Epiphany Muriuki</item>
        <item>Oliver Muthomi</item>
        <item>Eliot Anderson</item>
    </string-array>

    <string-array name="DiocesesInKenya">

       <item>Diocese of Bungoma</item>
        <item>Diocese of Eldoret</item>
        <item>Diocese of Embu</item>
        <item>Diocese of Garissa</item>
        <item>Diocese of Homa Bay</item>
        <item>Diocese of Kakamega</item>
        <item>Diocese of Kericho</item>
        <item>Diocese of Kisii</item>
        <item>Diocese of Kitale</item>
        <item>Diocese of Kitui</item>
        <item>Diocese of Lodwar</item>
        <item>Diocese of Machakos</item>
        <item>Diocese of Malindi</item>
        <item>Diocese of Maralal</item>
        <item>Diocese of Marsabit</item>
        <item>Diocese of Meru</item>
        <item>Diocese of Muranga</item>
        <item>Diocese of Nakuru</item>
        <item>Diocese of Ngong</item>
        <item>Diocese of Nyahururu</item>

    </string-array>



    <string name="en">English</string>
    <string name="sw">Kiswahili</string>


    <string name="app_name">Augustine</string>


    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="username">Username</string>
    <string name="phone">Phone Number</string>



    <string name="error_invalid_email">This email address is invalid</string>
    <string name="EmailShouldNotContainSpaces">Email should not contain spaces</string>
    <string name="error_short_password">At least 6 characters</string>
    <string name="IncorrectPassword">Incorrect Password</string>

    <string name="error_field_required">This field is required</string>

    <string name="LoginOrSignup">Log In Or Sign Up</string>


    <string name="Authenticating_dialog">Authenticating…</string>
    <string name="Logging_you_in_dialog">Logging you in…</string>
    <string name="Registering_you_dialog">Registering you…</string>
    <string name="Please_wait_dialog">Please Wait…</string>

    <string name="CheckInternetConnectionAndTryAgain">Check internet connection and try again</string>
    <string name="AnErrorOccurred_TryAgainLater">An error occurred. Try again later</string>

    <string name="OK">OK</string>
    <string name="Oops">Oops!</string>
    <string name="EnterCorrectPasswordAndTryAgain">Enter correct password and try again</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Email_IsNotRegistered">The email is not registered.</string>
    <string name="space" translatable="false">" "</string>
    <string name="at_symbol">\@</string>
    <string name="fullstop_symbol">.</string>

    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_twitter">Sign in with twitter</string>

    <string name="or">or</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    <string name="St_AugustineChaplaincyEgerton">St. Augustine Chaplaincy Egerton</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chats">Chats</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="submit">Submit</string>
    <string name="completeRegistration">Complete Registration</string>


</resources>
