<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparentBlack"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="64dp"
        android:background="@color/transparent"
        android:id="@+id/registrationContainer"

        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="24dp"

        android:background="@color/whitePure"

        android:orientation="vertical"

        android:layout_centerInParent="true"

        >
        <TextView
            android:id="@+id/registrationToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"


            android:elevation="4dp"
            android:fontFamily="monospace"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:text="@string/completeRegistration"

            android:textAlignment="center"
            android:textColor="@color/colorAccent"

            android:textStyle="normal"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            tools:targetApi="lollipop"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailContainer_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            >

            <EditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="none"
                android:editable="false"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameContainer_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp">

            <EditText
                android:textAlignment="center"
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneContainer_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp">

            <EditText
                android:layout_gravity="center"

                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Diocese"/>

            <Spinner
                android:id="@+id/diocese_register"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/DiocesesInKenya"


                android:spinnerMode="dialog" />

        </LinearLayout>


        <Button
            android:id="@+id/Btn_register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginStart="26dp"
            android:text="@string/submit"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


    </LinearLayout>

    </ScrollView>



</RelativeLayout>