<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_Authentication_Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light_blue"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/my_toolbarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:fontFamily="monospace"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:text="@string/LoginOrSignup"

        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="@dimen/textSize_For_toolbar_"
        android:textStyle="normal"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"


        tools:targetApi="lollipop" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ImgRosary"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/SupportAuthButtons"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/rosary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rosary"
            tools:ignore="ContentDescription" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/SupportAuthButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Captions"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttonSignWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/common_google_signin_btn_text_light"
            android:text="@string/sign_in_with_google"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignWithTwitter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSignWithTwitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="16dp"


            android:layout_marginStart="15dp"

            android:background="@drawable/twitter_button"

            android:drawableLeft="@drawable/tw"
            android:drawableStart="@drawable/tw"
            android:lines="1"
            android:paddingLeft="10dp"

            android:paddingRight="10dp"
            android:text="@string/sign_in_with_twitter"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toRightOf="@+id/buttonSignWithFacebook"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/buttonSignWithFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="15dp"

            android:layout_marginRight="8dp"


            android:layout_marginStart="15dp"
            android:background="@drawable/facebook_button"
            android:drawableLeft="@drawable/fb"
            android:drawableStart="@drawable/fb"

            android:lines="1"


            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/sign_in_with_facebook"

            app:layout_constraintBaseline_toBaselineOf="@+id/buttonSignWithTwitter"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toLeftOf="@+id/buttonSignWithTwitter" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/Captions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SignInPanel"
        android:layout_centerVertical="true"
        android:background="@color/transparentBlack">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/transparent"
            android:text="@string/or" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:entries="@array/SupportedLanguages"
            android:id="@+id/Spn_ChooseLanguage"
            android:spinnerMode="dropdown" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/SignInPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparentLessBlack"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Btn_AuthWithEmail"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginStart="26dp"
            android:text="@string/LoginOrSignup"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Btn_ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/ForgotPassword"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="26sp" />

    </LinearLayout>

</RelativeLayout>